# CPP_RL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  build.bash  devcontainer.json  initCommand.bash
data/policies/pendulum/: models_last.pt
data/yaml/pendulum/: config.yaml
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
include/algorithms/: ppo.h
include/configs/: configs.h  load_yaml.h
include/env/: env.h  pendulum.h  task_manager.h
include/env/physics_based_envs/: pendulum.h  pendulum_cart.h  physics_based_env.h
include/modules/: actor_critic.h  distribution.h  mlp.h  normalizer.h
include/modules/distributions/: beta.h  factory.h  normal.h
include/modules/normalizers/: empirical.h  factory.h  identity.h
include/runners/: metrics.h  on_policy_runner.h
include/scripts/: play.h  train.h
include/storage/: circular_buffer.h  observation_buffer.h  rollout.h
include/utils/: circular_buffer.h  export.h  task_manager.h  types.h  utils.h
python/: pendulum_plot.py  pendulums_plot.py
src/: main.cpp
src/algorithms/: ppo.cpp
src/env/: pendulum.cpp
src/env/physics_based_envs/: pendulum.cpp  pendulum_cart.cpp
src/modules/: actor_critic.cpp  distribution.cpp  mlp.cpp  normalizer.cpp
src/modules/distributions/: beta.cpp  normal.cpp
src/modules/normalizers/: empirical.cpp
src/runners/: on_policy_runner.cpp
src/storage/: observation_buffer.cpp  rollout.cpp
tests/storage/: observation_buffer_test.cpp
yaml/: play.yaml  train.yaml
